Improved personal details and added link to the email

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Hi, I am Mohit Agarwal</h1>
         <p>A little bit about me</p>
     </div>
-    <div class="container body-site">
+    <div class="container body-site  ">
         <h2>Who Am I?</h2>
         <p>
             A self-learner, a learning android developer, a JAVA lover, a little knowledge about some other languages out there, trying hard to defeat myself everyday- and that's me.<br>
@@ -37,17 +37,19 @@
         Checkout frequently for updates.
         <hr>
         <h2>
-            I am more userful than you think ;)
+            I am more useful than you think ;)
         </h2>
-        Want to gift yourself or your organisation an app?/ Try me!!!
+        Want to gift yourself or your organisation an app?
+		
+		Try me!!!
 
         Want Java,C or Android Classes? You can still try me !!!
 
-        contact details:-
+        Contact Details:-
 
-        Email- mohitagarwal9542@gmail.com
+     <a href="mailto:mohitagarwal9542@gmail.com">Email Me</a> 
 
-        Feedbacks are always welcomed!!!
+        Feedbacks are always welcome!!!
         <hr>
         <h2>
             Want to know more about me???
